plugins {
    id 'java'
}

group 'sada'
version '1.0-SNAPSHOT'

sourceCompatibility = 12

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}


tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}